--- a/assets/styles.css
+++ b/assets/styles.css
@@ -55,6 +55,10 @@ h2{
     border-bottom: 2px solid white;
     padding-bottom: 15px;
 }
+h3{
+    font-size: 1.5em;
+    font-weight: 300;
+}
 
 .df{
     display: flex;
@@ -74,6 +78,9 @@ h2{
 .spacea{
     justify-content: space-around;
 }
+.spacee{
+    justify-content: space-evenly;
+}
 .objCover{
     object-fit: cover;
 }
@@ -90,6 +97,12 @@ h2{
 }
 .vh90{
     min-height: 90vh;
+}
+.vh80{
+    min-height: 80vh;
+}
+.vh70{
+    min-height: 70vh;
 }
 .vh60{
     height: 60vh;
@@ -125,6 +138,9 @@ h2{
 .w40{
     width: 40%;
 }
+.w30{
+    width:30%;
+}
 .w20{
     width: 20%;
 }
@@ -146,6 +162,14 @@ div ul{
 #slider div button{
     border: none;
     background-color: #ffffff00;
+}
+
+.marginTop4{
+    margin-top: 4em;
+}
+
+#carrera{
+    margin-right: 6em;
 }
 
 #contCuadros{
