--- a/assets/styles.css
+++ b/assets/styles.css
@@ -12,6 +12,26 @@ header{
     z-index: 2;
 }
 
+.logo-container img {
+    margin-top: 20px;
+    height: 60px; /* Ajusta el tamaño según necesites */
+}
+
+.moverse{
+    transform: translateX(30px);
+    transition: transform 0.5s ease-in-out;
+}
+
+.invisibleA{
+    opacity: 0;
+    transition: opacity 0.8s ease-out;
+}
+
+.visible {
+    opacity: 1;
+    transition: opacity 1s ease-in;
+}
+
 header.scrolled {
     background-color: #ffffff; 
 }
@@ -62,6 +82,9 @@ h3{
 
 .df{
     display: flex;
+}
+.fEnd{
+    justify-content: end;
 }
 .columna{
     flex-direction: column;
@@ -126,6 +149,9 @@ h3{
 .w95{
     width: 95%;
 }
+.w90{
+    width: 90%;
+}
 .w80{
     width: 80%;
 }
@@ -134,6 +160,9 @@ h3{
 }
 .w60{
     width: 60%;
+}
+.w50{
+    width: 50%;
 }
 .w40{
     width: 40%;
@@ -169,8 +198,9 @@ div ul{
 }
 
 #carrera{
-    margin-right: 6em;
+    margin-left: 5em;
 }
+
 
 #contCuadros{
 
@@ -412,6 +442,10 @@ dialog div{
         left: 50%;
         transform: translate(-50%, -50%);
         box-shadow: 0 0 0 100vmax rgba(0, 0, 0, 0.8);
+    }
+
+    p{
+        font-size: 20px;
     }
 
 }
