--- a/assets/styles.css
+++ b/assets/styles.css
@@ -291,6 +291,16 @@ dialog div{
     display: none;
 }
 
+.iconoRed{
+    font-size: clamp(16px, 20px, 24px);
+    margin-right: 15px;
+}
+
+.rights{
+    align-items: end;
+    color: gray;
+}
+
 @media (max-width: 960px){
 
         .bordeVerde{
