--- a/assets/styles.css
+++ b/assets/styles.css
@@ -232,6 +232,10 @@ h4{
     font-size: 1.5em;
 }
 
+p{
+    font-size: clamp(14px, 18px, 20px);
+}
+
 footer{
     margin-top: 7em;
     height: 20vh;
@@ -292,13 +296,14 @@ dialog div{
 }
 
 .iconoRed{
-    font-size: clamp(16px, 20px, 24px);
+    font-size: clamp(25px, 20px, 24px);
     margin-right: 15px;
 }
 
 .rights{
     align-items: end;
     color: gray;
+    text-align: right;
 }
 
 @media (max-width: 960px){
@@ -361,11 +366,21 @@ dialog div{
             color: black;
         }
 
+        .w100t{
+            width: 100%;
+        }
+        .w90t{
+            width: 90%;
+        }
         .w80t{
             width: 80%;
         }
         .w70t{
             width: 70%;
+        }
+
+        .vh10t{
+            height: 15vh;
         }
 
         #imagen3{
@@ -378,9 +393,23 @@ dialog div{
             height: 31.5vh;
         }
 
+        footer{
+            height: 30vh;
+        }
+
+        .footerT{
+            display: flex;
+        }
+
+
 }
 
 @media (max-width: 480px){
+
+    .invisibleM{
+        display: none;
+    }
+
     #nav{
         width: 50%;
     }
@@ -397,6 +426,9 @@ dialog div{
     .w70m{
         width: 70%;
     }
+    .w30m{
+        width: 30%;
+    }
 
     .vh100m{
         min-height: 100vh;
@@ -410,12 +442,21 @@ dialog div{
     .vh60m{
         height: 60vh;
     }
+    .vh45m{
+        height: 45vh;
+    }
     .vh30m{
         height: 30vh;
+    }
+    .vh20m{
+        height: 20vh;
     }
 
     .dfm{
         display: flex;
+    }
+    .centerYm{
+        align-items: center;
     }
     .columnaM{
         flex-direction: column;
@@ -425,6 +466,10 @@ dialog div{
     }
     .spacebM{
         justify-content: space-between;
+    }
+
+    .fitContentM{
+        width: fit-content;
     }
 
     .separarLineas{
@@ -454,8 +499,21 @@ dialog div{
         box-shadow: 0 0 0 100vmax rgba(0, 0, 0, 0.8);
     }
 
-    p{
-        font-size: 20px;
+    #carrera{
+        margin-left: 2em;
+    }
+
+    .rights{
+        align-items: center;
+        text-align: center;
+    }
+
+    .contactF{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        justify-content: center;
     }
 
 }
